src/css/hero.css
/* --------Styles for Mobile --------*/
.hero {
  width: 100%;
  position: relative;
  flex-direction: column;
  background-image: url(/img/hero-1x-opt.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding-top: 281px;
  padding-bottom: 32px;
}

@media (min-resolution: 192dpi) {
  .hero {
    background-image: url('/img/hero-2x-opt.jpg');
  }
}

.main-title {
  font-weight: 500;
  font-size: 50px;
  line-height: 1;
  letter-spacing: -0.03em;
  text-transform: uppercase;
  color: #fafafa;
  max-width: 343px;
  margin: 0 auto;
  margin-bottom: 212px;
}

.social-list {
  display: flex;
  gap: 4px;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.link-item > a {
  font-weight: 500;
  font-size: 14px;
  letter-spacing: -0.02em;
  color: #fafafa;
  border: 1px solid rgba(250, 250, 250, 0.2);
  border-radius: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 37px;
  height: 37px;
  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.email > a {
  border: 1px solid rgba(250, 250, 250, 0.2);
  border-radius: 60px;
  width: 178px;
  height: 37px;
  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.link-item > a:hover {
  transform: scale(1.1);
}

/* Styles for Tablet devices */
@media only screen and (min-width: 768px) {
  .hero {
    padding-top: 300px;
  }
  .main-title {
    font-weight: 500;
    font-size: 90px;
    max-width: 632px;
    margin-bottom: 187px;
  }
  .social-list {
    gap: 8px;
    justify-content: flex-end;
    align-items: flex-end;
    flex-wrap: nowrap;
  }
  .link-item > a {
    font-weight: 500;
    font-size: 16px;
    width: 55px;
    height: 55px;
  }
  .email > a {
    padding: 18px 24px;
    width: 223px;
    height: 55px;
  }
}

/* Styles for Desktop devices */
@media only screen and (min-width: 1440px) {
  .hero {
    padding-top: 242px;
  }
  .main-title {
    max-width: 1084px;
    margin-bottom: 301px;
  }
}

